# nixos-config

./: .gitignore  .gitmodules  .sops.yaml  README.md  apps.nix  file-tree.nix  flake.nix  functions.nix  garbage  lib.nix  machine.json  machine.toml  rebuild  rebuild.nix  schema.json  shells.nix
.github/hooks/: pre-push
.github/workflows/: check.yml  checks.yml
.zed/: settings.json  statix.toml
configs/mo/: passwd
configs/shared/: .zshrc
docs/: special_thanks.md
hardware/: 0.nix  230925799001945.nix  H1XH7F3CNCMC0015F0243.nix  MOELITEBOOK.nix  MXL0265298.nix  PDXVT001X6J2P5.nix
homes/: symlink
modules/: base.nix  browser.nix  containers.nix  default.nix  desktop.nix  gaming.nix  hardware.nix  programs.nix  remote.nix  settings.nix  shell.nix  tundra.nix
modules/browser/: chromium.nix  firefox.nix
modules/desktop/: audio.nix  base.nix  default.nix  gnome.nix  keymap.nix  niri.nix  plasma.nix  wm.nix  xfce.nix
modules/gaming/: base.nix  default.nix  emulation.nix  epic.nix  gamescope.nix  lutris.nix  mangohud.nix  minecraft.nix  steam.nix  vr.nix
modules/hardware/: artist12.nix  default.nix  g710.nix  gpu.nix  iio-sensors.nix
overlays/: branches.nix  channels.nix  community.nix  hotfixes.nix  lib.nix
overlays/shanetrs/server-aio/server_tools/: Cargo.toml
overlays/shanetrs/server-aio/server_tools/src/: lazy.rs  main.rs  silence.rs
profiles/: bolillo.nix  crumb.nix  dionysus.nix  lachesis.nix  mo-elitebook.nix  persephone.nix  saturn.nix  solis.nix  standalone.nix
systems/: bolillo.nix  crumb.nix  saturn.nix  solis.nix
user/homes/: symlink
(+142 files in other folders)
