[package]
name = "server_tools"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "aio"
path = "src/main.rs"

[profile.release]
opt-level = 3
strip = true
codegen-units = 1
lto = "fat"
panic = "abort"

[dependencies]
tokio = { version = "1.35.1", features = [
  "rt-multi-thread",
  "net",
  "io-util",
  "time",
  "macros",
] }
shanetrs = { path = "../shanetrs" }
strs_pm = { path = "../shanetrs/proc_macro" }